# config-value

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  config-lang.cabal  config-value.cabal  config-value.vim  demo.txt
.github/workflows/: haskell-ci.yml
src/: Config.hs  ConfigFile.hs  Lexer.x  Parser.hs
src/Config/: Lens.hs  Lexer.x  LexerUtils.hs  Macro.hs  Number.hs  NumberParser.y  Parser.y  ParserUtils.hs  Pretty.hs  Tokens.hs  Value.hs
src/ConfigFile/: Lexer.x  Parser.y  Tokens.hs
test/: Main.hs
