name:                config-file
version:             0.1
synopsis:            Simple, layout-based value language intended for small configuration files.
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2015 Eric Mertens
category:            Language
build-type:          Simple
cabal-version:       >=1.10
-- description:         

library

  exposed-modules:     ConfigFile,
                       ConfigFile.Parser

  other-modules:       ConfigFile.Lexer,
                       ConfigFile.Tokens
  build-depends:       base       >= 4.7     && < 4.8,
                       array      >= 0.5     && < 0.6,
                       bytestring >= 0.10.4  && < 0.11,
                       text       >= 1.2.0.4 && < 1.3
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
