name:                config-value
version:             0.1
synopsis:            Simple, layout-based value language similar to YAML or JSON
license:             MIT
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2015 Eric Mertens
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library

  exposed-modules:     Config

  other-modules:       Config.Lexer,
                       Config.Parser,
                       Config.Tokens,
                       Config.Pretty,
                       Config.Value

  build-depends:       base       >= 4.7     && < 4.8,
                       array      >= 0.5     && < 0.6,
                       bytestring >= 0.10.4  && < 0.11,
                       text       >= 1.2.0.4 && < 1.3,
                       pretty     >= 1.1.3.2 && < 1.2
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
